[package]
name = "vibrato-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_bindgen = "0.8.1"
serde = { version = "1", features = ["derive"] }
vibrato = "0.5.1"
zstd = "0.12.3"

[lib]
name = "vibrato_deno"
crate-type = ["cdylib"]
