[package]
name = "vibrato-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
vibrato = "0.5.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
anyhow = "1.0.71"
serde-wasm-bindgen = "0.6.5"
zstd = { version = "0.13.1", default-features = false, features = ["wasm"] }

[lib]
name = "vibrato_deno"
crate-type = ["cdylib"]

[profile.release]
lto = true
