[package]
name = "vibrato-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
vibrato = "0.5.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
zstd = { version = "=0.13.0", default-features = false, features = [
  "wasm",
  "thin",
] }
zstd-sys = "=2.0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lib]
name = "vibrato_deno"
crate-type = ["cdylib"]

[profile.release]
lto = true
